* configurable start page, like start on dashboard
* relationships in print?
* Documentation improvements:
* POP3Main, multiple filters, workflow.cs, ldap
* blog about lucene.net


-----------------------------------------------------------------------
Version 3.1.2   02/xx/2009   (svn revision xxx)
-----------------------------------------------------------------------

* Version 3.0.5 broke the features where BugTracker.NET records the
most recent login date of a user.  Fixed in this version.   

* check multiline edits in chrome

* Corrected some typos in the hour dropdowns in the time tracking 
feature.

-----------------------------------------------------------------------
Version 3.1.1   02/07/2009   (svn revision 304)
-----------------------------------------------------------------------

* Fixed bug with "show images inline" when MIME type was pjpeg or x-png.
IE7 tends to use these MIME types.

* Fixed bug: Custom fields rendered as textareas were getting 
HtmlEncoded twice.

* Fixed bug: Custom fields displayed in textareas lost their formatting
when displayed as read only.

-----------------------------------------------------------------------
Version 3.1.0   01/31/2009   (svn revision 302)
-----------------------------------------------------------------------

* You can now have the incoming emails from btnet_service.exe trigger
the creation of new BugTracker.NET users, with the "from" address being
the username.  See these new settings in Web.config:
	CreateUserFromEmailAddressIfThisUsername
	CreateUsersFromEmailTemplate

* Fixed bug 2453704 "Null reference when adding bug with news on", in
whatsnew.cs.

* Added Web.config setting "AspNetFormId" which you can use to override
what form id some of the the javascript looks for.  Different versions
of ASP.NET have generated HTML forms with different ids, and the 
previous logic was guessing those ids wrong for some configurations.

* Changed "FCKConfig.EnterMode" from <p> to <br>, so that enter key in 