@@ -88,6 +88,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Anthony Goggin at <a href="http://www.solutionwhere.com/">Solutionwhere, Inc.</a>
 <li>Ben Petersen
 <li>bidllc
+<li>Chris Abichandani at <a href="http://continuumconcepts.com">Continuum Concepts, LLC</a>
 <li>Chris Harrington
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
 <li>Daniel Watts
